apps/debug-container/k8s.netshoot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: netshoot
  name: netshoot
  namespace: kube-system
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netshoot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netshoot
    spec:
      containers:
        # https://github.com/nicolaka/netshoot/pkgs/container/netshoot
        - image: ghcr.io/nicolaka/netshoot:v0.16
          name: netshoot
          args:
            - "iperf"
            - "-s"
            - "-p"
            - "9999"
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 5Mi
